force-app/main/default/objects/Loan_Application__c/Loan_Application__c.object-meta.xml
<CustomObject>
    <label>Loan Application</label>
    <pluralLabel>Loan Applications</pluralLabel>
    <description>Tracks individual loan requests, statuses, amounts, terms, and approval details.</description>
    <nameField>
        <label>Loan Number</label>
        <type>AutoNumber</type>
        <displayFormat>LOAN-{000000}</displayFormat>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>