force-app/main/default/objects/Loan_Application__c/fields/Applied_Date__c.field-meta.xml
<CustomField>
    <fullName>Applied_Date__c</fullName>
    <label>Applied Date</label>
    <type>Date</type>
    <description>Date when the customer submitted the application.</description>
    <inlineHelpText>Date when the customer submitted the application.</inlineHelpText>
</CustomField>