force-app/main/default/objects/Loan_Application__c/fields/Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Date__c</fullName>
    <label>Approved Date</label>
    <type>Date</type>
    <description>Date when the Branch Manager approved the loan.</description>
    <inlineHelpText>Date when the Branch Manager approved the loan.</inlineHelpText>
</CustomField>