force-app/main/default/objects/Loan_Application__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <label>Branch</label>
    <type>Picklist</type>
    <description>Banking branch processing the loan.</description>
    <inlineHelpText>Banking branch processing the loan.</inlineHelpText>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Main Branch</fullName>
            </value>
            <value>
                <fullName>North Branch</fullName>
            </value>
            <value>
                <fullName>South Branch</fullName>
            </value>
            <value>
                <fullName>East Branch</fullName>
            </value>
            <value>
                <fullName>West Branch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <required>true</required>
</CustomField>