force-app/main/default/objects/Loan_Application__c/fields/EMI_Amount__c.field-meta.xml
<CustomField>
    <fullName>EMI_Amount__c</fullName>
    <label>EMI Amount</label>
    <type>Currency</type>
    <description>Calculates monthly Equated Monthly Installment (EMI).</description>
    <inlineHelpText>Calculates monthly Equated Monthly Installment (EMI).</inlineHelpText>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>