force-app/main/default/objects/Loan_Application__c/fields/Guarantor__c.field-meta.xml
<CustomField>
    <fullName>Guarantor__c</fullName>
    <label>Guarantor</label>
    <type>Lookup</type>
    <description>Primary guarantor associated with this loan.</description>
    <inlineHelpText>Primary guarantor associated with this loan.</inlineHelpText>
    <referenceTo>Guarantor__c</referenceTo>
    <relationshipLabel>Loan Applications</relationshipLabel>
    <relationshipName>Loan_Applications</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>