force-app/main/default/objects/Loan_Application__c/fields/Interest_Rate_Percent__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_Percent__c</fullName>
    <label>Interest Rate Percent</label>
    <type>Percent</type>
    <description>Annualized interest rate (e.g. 10.50% stored as 0.105).</description>
    <inlineHelpText>Annualized interest rate (e.g. 10.50% stored as 0.105).</inlineHelpText>
    <precision>5</precision>
    <scale>2</scale>
    <required>true</required>
</CustomField>