force-app/main/default/objects/Loan_Application__c/fields/Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Loan_Amount__c</fullName>
    <label>Loan Amount</label>
    <type>Currency</type>
    <description>Principal loan amount requested.</description>
    <inlineHelpText>Principal loan amount requested.</inlineHelpText>
    <precision>18</precision>
    <scale>2</scale>
    <required>true</required>
</CustomField>