force-app/main/default/objects/Loan_Application__c/fields/Loan_Officer__c.field-meta.xml
<CustomField>
    <fullName>Loan_Officer__c</fullName>
    <label>Loan Officer</label>
    <type>Lookup</type>
    <description>Internal Loan Officer managing this application.</description>
    <inlineHelpText>Internal Loan Officer managing this application.</inlineHelpText>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Assigned Loans</relationshipLabel>
    <relationshipName>Assigned_Loans</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>