force-app/main/default/objects/Loan_Application__c/fields/Loan_Tenure_Months__c.field-meta.xml
<CustomField>
    <fullName>Loan_Tenure_Months__c</fullName>
    <label>Loan Tenure Months</label>
    <type>Number</type>
    <description>Amortization period in months.</description>
    <inlineHelpText>Amortization period in months.</inlineHelpText>
    <precision>3</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>