force-app/main/default/objects/Loan_Application__c/fields/Paid_EMI_Count__c.field-meta.xml
<CustomField>
    <fullName>Paid_EMI_Count__c</fullName>
    <label>Paid EMI Count</label>
    <type>Summary</type>
    <description>Counts number of cleared installments.</description>
    <inlineHelpText>Counts number of cleared installments.</inlineHelpText>
    <summaryForeignKey>EMI_Schedule__c.Loan_Application__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <summaryFilterItems>
        <field>EMI_Schedule__c.Is_Paid_Flag__c</field>
        <operation>equals</operation>
        <value>true</value>
    </summaryFilterItems>
</CustomField>