force-app/main/default/objects/Loan_Application__c/fields/Total_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Paid__c</fullName>
    <label>Total Amount Paid</label>
    <type>Summary</type>
    <description>Sum of all successfully captured payments.</description>
    <inlineHelpText>Sum of all successfully captured payments.</inlineHelpText>
    <summaryForeignKey>Payment__c.Loan_Application__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <summarizedField>Payment__c.Payment_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Payment__c.Payment_Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
</CustomField>