force-app/main/default/objects/Loan_Application__c/fields/Total_EMI_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_EMI_Count__c</fullName>
    <label>Total EMI Count</label>
    <type>Summary</type>
    <description>Total scheduled installments.</description>
    <inlineHelpText>Total scheduled installments.</inlineHelpText>
    <summaryForeignKey>EMI_Schedule__c.Loan_Application__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
</CustomField>